css/layout improvements

--- a/inst/includes/html/key_entry.html
+++ b/inst/includes/html/key_entry.html
@@ -1,5 +1,7 @@
 <div id="mySidepanel" class="sidepanel">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <label for="key">🔑</label>
-  <input id="key" class="cryptinfo" onchange="triggerDecrypt(this)"></input>
+  <div class="spcontainer">
+    <label for="key">🔑</label>
+    <input id="key" class="cryptinfo" onchange="triggerDecrypt(this)"></input>
+  </div>
 </div>
