--- a/inst/includes/css/encrypted_chunk.css
+++ b/inst/includes/css/encrypted_chunk.css
@@ -8,7 +8,6 @@
   display: block;
   background-color: rgba(.9,.9,.9,.1);
   backdrop-filter: blur(10px);
-
   cursor: pointer;
 }
 
@@ -35,7 +34,7 @@
 
 /* The sidepanel links */
 .sidepanel a {
-  padding: 8px 8px 8px 32px;
+  padding: 8px 8px 8px 8px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -52,21 +51,26 @@
 .sidepanel .closebtn {
   position: absolute;
   top: 0;
-  right: 25px;
+  right: 0;
   font-size: 36px;
   margin-left: 50px;
 }
 
 .sidepanel label {
-  padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 150%;
-  transition: 0.3s;
+  float: left;
+  width: 10%;
+  overflow: hidden;
 }
 
 .sidepanel input {
-  margin: 8px 8px 8px 8px;
   font-size: 16px;
-  width: 80%;
+  float: right;
+  width: 90%;
+
+}
+
+.sidepanel .spcontainer {
+  padding: 1em;
 }
 
